# yage

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  blueprint.html
examples/: CMakeLists.txt
examples/audio/: CMakeLists.txt  main.cpp
examples/camera/: CMakeLists.txt  main.cpp
examples/custom_shader/: CMakeLists.txt  custom.frag  custom.vert  main.cpp
examples/custom_texture/: CMakeLists.txt  main.cpp
examples/hello_window/: CMakeLists.txt  main.cpp
examples/networking/: CMakeLists.txt  main.cpp
examples/scene_manager/: CMakeLists.txt  main.cpp
examples/serializer/: CMakeLists.txt  main.cpp
examples/simple_shapes/: CMakeLists.txt  main.cpp
examples/user_input/: CMakeLists.txt  main.cpp
yage/: CMakeLists.txt
yage/include/yage/: input.h  renderer.h  shader.h  shader_source.h.in  types.h  utils.h  window.h  yage.h
yage/include/yage/extras/: audio.h  camera.h  network.h  scene.h  scene_manager.h  serializer.h  shader.h  texture.h
yage/shaders/: shader.frag  shader.vert
yage/src/: input.cpp  renderer.cpp  window.cpp  yage.cpp
yage/src/extras/: audio.cpp  camera.cpp  network.cpp  scene_manager.cpp  serializer.cpp  shader.cpp  texture.cpp
